--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </nav>
 
   <!-- Sidebar -->
-  <div id="sidebar" class="fixed top-0 right-0 w-64 h-full bg-teal-600 text-white transform translate-x-full transition-transform duration-300 z-30">
+  <div id="sidebar" class="fixed top-0 right-0 w-80 h-full bg-teal-600 text-white transform translate-x-full transition-transform duration-300 z-30">
     <div class="p-6">
       <button id="close-btn" class="text-white text-2xl mb-6">✕</button>
       <ul class="space-y-4">
@@ -42,7 +42,7 @@
   </div>
 
   <!-- Hero Section -->
-  <section class="bg-gradient-to-r from-teal-500 to-indigo-600 text-white h-screen flex items-center justify-center">
+  <section class="bg-gradient-to-r from-teal-500 to-indigo-600 text-white h-[70vh] flex items-center justify-center">
     <div class="text-center px-6">
       <h2 class="text-5xl font-bold mb-4">Welcome to Team Writers Hub</h2>
       <p class="text-lg mb-6">A creative space for the next generation of storytellers.</p>
@@ -53,8 +53,8 @@
   </section>
 
   <!-- Info Section -->
-  <section id="info" class="py-20 bg-gray-100">
-    <div class="max-w-6xl mx-auto px-6 text-center">
+  <section id="info" class="py-16 bg-gray-100">
+    <div class="max-w-6xl mx-auto px-6 text-center -mt-12">
       <h3 class="text-3xl font-bold text-gray-800 mb-12">Everything You Need in One Place</h3>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg">
