--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="hidden md:flex space-x-6">
         <li><a href="#" class="text-gray-700 hover:text-teal-600">Home</a></li>
         <li><a href="#info" class="text-gray-700 hover:text-teal-600">About</a></li>
-        <li><a href="#resources" class="text-gray-700 hover:text-teal-600">Resources</a></li>
+        <li><a href="#cards" class="text-gray-700 hover:text-teal-600">Resources</a></li>
       </ul>
       <!-- Sidebar toggle button -->
       <button id="menu-btn" class="md:hidden text-gray-700 hover:text-teal-600 focus:outline-none">
@@ -41,45 +41,33 @@
     </div>
   </div>
 
-  <!-- Hero Section -->
-  <section class="bg-gradient-to-r from-teal-500 to-indigo-600 text-white h-[70vh] flex items-center justify-center">
-    <div class="text-center px-6">
+  <!-- Hero + Cards Section -->
+  <section class="bg-gradient-to-r from-teal-500 to-indigo-600 text-white pt-32 pb-20">
+    <div class="text-center px-6 mb-16">
       <h2 class="text-5xl font-bold mb-4">Welcome to Team Writers Hub</h2>
       <p class="text-lg mb-6">A creative space for the next generation of storytellers.</p>
       <a href="create-account.html" class="px-6 py-3 bg-white text-teal-600 font-semibold rounded-lg shadow-md hover:bg-gray-100">
         Join Now
       </a>
     </div>
-  </section>
 
-  <!-- Info Section -->
-  <section id="info" class="py-16 bg-gray-100">
-    <div class="max-w-6xl mx-auto px-6 text-center -mt-12">
-      <h3 class="text-3xl font-bold text-gray-800 mb-12">Everything You Need in One Place</h3>
+    <!-- Info Cards directly on gradient -->
+    <div id="cards" class="max-w-6xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-bold mb-12">Everything You Need in One Place</h3>
       <div class="grid md:grid-cols-3 gap-8">
-        <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg">
-          <h4 class="text-xl font-semibold mb-3 text-teal-600">For New Writers</h4>
-          <p class="text-gray-600">Tips, starter guides, and resources to help you begin your writing journey.</p>
+        <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
+          <h4 class="text-xl font-semibold mb-3">For New Writers</h4>
+          <p>Tips, starter guides, and resources to help you begin your writing journey.</p>
         </div>
-        <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg">
-          <h4 class="text-xl font-semibold mb-3 text-teal-600">Community</h4>
-          <p class="text-gray-600">Connect with other teen writers, share your work, and get feedback.</p>
+        <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
+          <h4 class="text-xl font-semibold mb-3">Community</h4>
+          <p>Connect with other teen writers, share your work, and get feedback.</p>
         </div>
-        <div class="p-6 bg-white rounded-xl shadow-md hover:shadow-lg">
-          <h4 class="text-xl font-semibold mb-3 text-teal-600">Events & Challenges</h4>
-          <p class="text-gray-600">Join contests, prompts, and challenges to sharpen your skills.</p>
+        <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
+          <h4 class="text-xl font-semibold mb-3">Events & Challenges</h4>
+          <p>Join contests, prompts, and challenges to sharpen your skills.</p>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- Resources Section -->
-  <section id="resources" class="py-20">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h3 class="text-3xl font-bold text-gray-800 mb-12">Writer Resources</h3>
-      <p class="text-gray-600 max-w-2xl mx-auto">
-        Coming soon: curated articles, writing prompts, and guides designed just for teen writers.
-      </p>
     </div>
   </section>
 
