--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 
     <!-- Info Cards directly on gradient -->
     <div id="cards" class="max-w-6xl mx-auto px-6 text-center">
-      <h3 class="text-3xl font-bold mb-12">Everything You Need in One Place</h3>
+      <h3 class="text-3xl font-bold mb-12">  </h3>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
-          <h4 class="text-xl font-semibold mb-3">For New Writers</h4>
-          <p>Tips, starter guides, and resources to help you begin your writing journey.</p>
+          <h4 class="text-xl font-semibold mb-3">For New And Expierenced Writers</h4>
+          <p>There's Something For Everyone Whether Your Twelve Or Nineteen</p>
         </div>
         <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
           <h4 class="text-xl font-semibold mb-3">Community</h4>
           <p>Connect with other teen writers, share your work, and get feedback.</p>
         </div>
         <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
-          <h4 class="text-xl font-semibold mb-3">Events & Challenges</h4>
-          <p>Join contests, prompts, and challenges to sharpen your skills.</p>
+          <h4 class="text-xl font-semibold mb-3">Book Club + Other Minor Book Clubs</h4>
+          <p> Each month there is a new book that you can discuss with everyone else.</p>
         </div>
       </div>
     </div>
