--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </div>
   </div>
 
-  <!-- Hero + Cards Section -->
-  <section class="bg-gradient-to-r from-teal-500 to-indigo-600 text-white pt-32 pb-20">
-    <div class="text-center px-6 mb-16">
+  <!-- Hero + Cards Section (fills full screen) -->
+  <section class="bg-gradient-to-r from-teal-500 to-indigo-600 text-white min-h-screen flex flex-col justify-center items-center pt-32 px-6">
+    <div class="text-center mb-12">
       <h2 class="text-5xl font-bold mb-4">Welcome to Team Writers Hub</h2>
       <p class="text-lg mb-6">A creative space for the next generation of storytellers.</p>
       <a href="create-account.html" class="px-6 py-3 bg-white text-teal-600 font-semibold rounded-lg shadow-md hover:bg-gray-100">
@@ -53,12 +53,11 @@
     </div>
 
     <!-- Info Cards directly on gradient -->
-    <div id="cards" class="max-w-6xl mx-auto px-6 text-center">
-      <h3 class="text-3xl font-bold mb-12">  </h3>
+    <div id="cards" class="max-w-6xl mx-auto text-center">
       <div class="grid md:grid-cols-3 gap-8">
         <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
-          <h4 class="text-xl font-semibold mb-3">For New And Expierenced Writers</h4>
-          <p>There's Something For Everyone Whether Your Twelve Or Nineteen</p>
+          <h4 class="text-xl font-semibold mb-3">For New And Experienced Writers</h4>
+          <p>There's something for everyone whether you're twelve or nineteen.</p>
         </div>
         <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
           <h4 class="text-xl font-semibold mb-3">Community</h4>
@@ -66,7 +65,7 @@
         </div>
         <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
           <h4 class="text-xl font-semibold mb-3">Book Club + Other Minor Book Clubs</h4>
-          <p> Each month there is a new book that you can discuss with everyone else.</p>
+          <p>Each month there is a new book that you can discuss with everyone else.</p>
         </div>
       </div>
     </div>
