--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    html { scroll-behavior: smooth; } /* smooth scrolling */
+    html { scroll-behavior: smooth; }
   </style>
 </head>
 <body class="bg-gray-50">
@@ -36,6 +36,10 @@
     <div class="p-6">
       <button id="close-btn" class="text-white text-2xl mb-6">✕</button>
       <ul class="space-y-6 text-lg font-semibold">
+        <li><a href="#" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Home</a></li>
+        <li><a href="#info" class="block px-4 py-2 rounded-lg hover:bg-teal-500">About</a></li>
+        <li><a href="#cards" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Resources</a></li>
+        <hr class="border-white/40">
         <li><a href="sign-in.html" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Sign In</a></li>
         <li><a href="create-account.html" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Create Account</a></li>
       </ul>
