--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
       <ul class="hidden md:flex space-x-10 text-lg font-semibold">
         <li><a href="#" class="text-gray-800 hover:text-teal-600">Home</a></li>
         <li><a href="#info" class="text-gray-800 hover:text-teal-600">About</a></li>
-        <li><a href="#cards" class="text-gray-800 hover:text-teal-600">Resources</a></li>
+        <li>
+          <button id="menu-btn-desktop" class="text-gray-800 hover:text-teal-600 focus:outline-none">
+            Sidebar
+          </button>
+        </li>
       </ul>
-      <!-- Sidebar toggle button -->
+      <!-- Sidebar toggle button (mobile) -->
       <button id="menu-btn" class="md:hidden text-2xl text-gray-700 hover:text-teal-600 focus:outline-none">
         ☰
       </button>
@@ -38,7 +42,6 @@
       <ul class="space-y-6 text-lg font-semibold">
         <li><a href="#" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Home</a></li>
         <li><a href="#info" class="block px-4 py-2 rounded-lg hover:bg-teal-500">About</a></li>
-        <li><a href="#cards" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Resources</a></li>
         <hr class="border-white/40">
         <li><a href="sign-in.html" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Sign In</a></li>
         <li><a href="create-account.html" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Create Account</a></li>
@@ -82,17 +85,22 @@
 
   <!-- Sidebar Script -->
   <script>
-    const menuBtn = document.getElementById('menu-btn');
+    const menuBtn = document.getElementById('menu-btn'); // mobile
+    const menuBtnDesktop = document.getElementById('menu-btn-desktop'); // desktop
     const closeBtn = document.getElementById('close-btn');
     const sidebar = document.getElementById('sidebar');
 
-    menuBtn.addEventListener('click', () => {
+    function openSidebar() {
       sidebar.classList.remove('translate-x-full');
-    });
+    }
 
-    closeBtn.addEventListener('click', () => {
+    function closeSidebar() {
       sidebar.classList.add('translate-x-full');
-    });
+    }
+
+    menuBtn.addEventListener('click', openSidebar);
+    menuBtnDesktop.addEventListener('click', openSidebar);
+    closeBtn.addEventListener('click', closeSidebar);
   </script>
 
 </body>
