--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
 
   <!-- Sidebar -->
-  <div id="sidebar" class="fixed top-0 right-0 w-80 h-full bg-teal-600 text-white transform translate-x-full transition-transform duration-300 z-30">
+  <div id="sign in" class="fixed top-0 right-0 w-80 h-full bg-teal-600 text-white transform translate-x-full transition-transform duration-300 z-30">
     <div class="p-6">
       <button id="close-btn" class="text-white text-2xl mb-6">✕</button>
       <ul class="space-y-6 text-lg font-semibold">
