--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="#" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Home</a></li>
         <li><a href="#info" class="block px-4 py-2 rounded-lg hover:bg-teal-500">About</a></li>
         <hr class="border-white/40">
-        <li><a href="sign-in.html" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Sign In</a></li>
+        <li><a href="sign-in.html" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Sign-In</a></li>
         <li><a href="create-account.html" class="block px-4 py-2 rounded-lg hover:bg-teal-500">Create Account</a></li>
       </ul>
     </div>
