--- a/sidebar.html
+++ b/sidebar.html
@@ -1,156 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sidebar</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --w: 320px;                 /* width */
-      --bg: #0b0c0e;              /* near-black */
-      --bg-elev: #101215;         /* subtle elevation */
-      --text: #e5e7eb;            /* light gray */
-      --muted: #9ca3af;
-      --border: rgba(255,255,255,0.07);
-      --accent: #22d3ee;          /* fixed accent (cyan) */
-    }
-    *{ box-sizing: border-box; }
-    html,body{ height:100%; }
-    body{
-      margin:0;
-      width:100%;
-      min-height:100%;
-      background: var(--bg);
-      color: var(--text);
-      font-family: "Poppins", system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
-    }
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Teen Writers • Sidebar</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+<style>
+  :root{
+    --w: 320px;
+    --bg: #0b0c0e;          /* near-black */
+    --item: #1f232b;        /* pill bg */
+    --item-hover: #262b35;  /* hover bg */
+    --text: #f3f4f6;        /* light */
+    --muted: #9ca3af;       /* label */
+    --border: rgba(255,255,255,0.07);
+    --accent: #ffffff;      /* white text emphasis */
+  }
+  *{ box-sizing: border-box; }
+  html,body{ height:100%; }
+  body{
+    margin:0;
+    background: var(--bg);
+    color: var(--text);
+    font-family: "Poppins", system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
+  }
+  .sidebar{
+    width: var(--w);
+    height: 100vh;
+    padding: 28px 22px 22px;
+    border-right: 1px solid var(--border);
+    display:flex;
+    flex-direction:column;
+    background: var(--bg);
+  }
 
-    .sidebar{
-      width: var(--w);
-      height: 100vh;
-      padding: 24px 22px;
-      display:flex;
-      flex-direction:column;
-      background: var(--bg);
-      border-right: 1px solid var(--border);
-    }
+  /* Brand */
+  .brand{
+    font-size: 32px;
+    font-weight: 700;
+    letter-spacing: .2px;
+    margin: 0 0 16px;
+  }
 
-    /* Brand */
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      margin-bottom: 18px;
-    }
-    .logo-dot{
-      width: 14px; height:14px; border-radius:50%;
-      background: var(--accent);
-      box-shadow: 0 0 0 4px rgba(34,211,238,0.18);
-    }
-    .brand-name{
-      font-size: 28px;
-      font-weight: 700;
-      letter-spacing:.2px;
-    }
+  /* Section label */
+  .label{
+    margin: 18px 0 12px;
+    font-size: 12px;
+    letter-spacing: .18em;
+    color: var(--muted);
+    text-transform: uppercase;
+  }
 
-    .divider{
-      height:1px;
-      background: var(--border);
-      margin: 10px 0 14px;
-    }
+  /* Nav list */
+  nav{ display:flex; flex-direction:column; gap:14px; }
+  .item{
+    display:flex;
+    align-items:center;
+    gap:14px;
+    padding: 14px 16px;
+    border-radius: 14px;
+    background: transparent;
+    color: var(--text);
+    text-decoration: none;
+    font-size: 20px;       /* big */
+    font-weight: 700;      /* bold like screenshot */
+    border: 1px solid transparent;
+    transition: background .15s ease, border-color .15s ease, transform .04s ease-in-out;
+  }
+  .item:hover{ background: var(--item-hover); border-color: var(--border); }
+  .item.active{
+    background: var(--item);
+    border-color: var(--border);
+  }
+  .emoji{ width: 28px; text-align:center; flex: 0 0 28px; }
 
-    /* Nav */
-    nav{ display:flex; flex-direction:column; gap:10px; margin-top: 6px; }
-    .nav-link{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      padding: 12px 14px;
-      font-size: 20px;             /* larger text */
-      font-weight: 600;
-      color: var(--text);
-      text-decoration:none;
-      border: 1px solid transparent;
-      border-radius: 12px;
-      background: transparent;
-      transition: border-color .15s ease, background .15s ease, transform .04s ease-in-out;
-    }
-    .nav-link:hover{
-      background: var(--bg-elev);
-      border-color: var(--border);
-    }
-    .nav-link:focus-visible{
-      outline: 2px solid var(--accent);
-      outline-offset: 2px;
-    }
-    .nav-link.active{
-      background: linear-gradient(180deg, rgba(255,255,255,0.02) 0%, rgba(255,255,255,0.00) 100%);
-      border-color: rgba(34,211,238,0.28);
-      box-shadow: inset 3px 0 0 var(--accent);
-    }
+  /* Scroll area so long menus won’t overflow small screens */
+  .scroll{ overflow:auto; padding-right: 2px; }
 
-    /* Section labels (optional, kept subtle) */
-    .label{
-      margin-top: 14px;
-      font-size: 11px;
-      color: var(--muted);
-      letter-spacing:.4px;
-      text-transform: uppercase;
-    }
-
-    /* Scroll if needed */
-    .scroll{
-      overflow:auto;
-      overscroll-behavior: contain;
-      padding-right: 3px;
-    }
-  </style>
+  /* Thin scrollbar (webkit) */
+  .scroll::-webkit-scrollbar{ width: 8px; }
+  .scroll::-webkit-scrollbar-thumb{ background: #1b1f26; border-radius: 8px; }
+</style>
 </head>
 <body>
-  <aside class="sidebar" role="navigation" aria-label="Main sidebar">
-    <div class="brand">
-      <div class="logo-dot" aria-hidden="true"></div>
-      <div class="brand-name">Team Writers Hub</div>
-    </div>
-
-    <div class="divider" aria-hidden="true"></div>
+  <aside class="sidebar" role="navigation" aria-label="Teen Writers sidebar">
+    <h1 class="brand">Teen Writers</h1>
 
     <div class="scroll">
+      <div class="label">Core</div>
       <nav>
-        <a class="nav-link" href="main-hallway.html">Main Hallway</a>
-        <a class="nav-link" href="newspaper.html">Newspaper</a>
-        <a class="nav-link" href="info.html">Info</a>
-        <a class="nav-link" href="intro.html">Intro</a>
-        <a class="nav-link" href="feedback.html">Writing Feedback</a>
-        <a class="nav-link" href="tools.html">Tools</a>
-        <a class="nav-link" href="features.html">Features</a>
-        <a class="nav-link" href="book-club.html">Book Club</a>
-        <a class="nav-link" href="fan-clubs.html">Fan Clubs</a>
+        <a class="item" href="main-hallway.html" target="_parent">
+          <span class="emoji" aria-hidden="true">🏠</span> <span>Main Hallway</span>
+        </a>
+        <a class="item" href="newspaper.html" target="_parent">
+          <span class="emoji" aria-hidden="true">📰</span> <span>Newspaper</span>
+        </a>
+        <a class="item" href="info.html" target="_parent">
+          <span class="emoji" aria-hidden="true">ℹ️</span> <span>Info</span>
+        </a>
+        <a class="item" href="intro.html" target="_parent">
+          <span class="emoji" aria-hidden="true">👋</span> <span>Intro</span>
+        </a>
       </nav>
 
-      <!-- Optional section label example (remove if you want it ultra-minimal)
-      <div class="label">Account</div>
+      <div class="label">Writing</div>
       <nav>
-        <a class="nav-link" href="settings.html">Settings</a>
+        <a class="item" href="feedback.html" target="_parent">
+          <span class="emoji" aria-hidden="true">📝</span> <span>Writing Feedback</span>
+        </a>
+        <a class="item" href="tools.html" target="_parent">
+          <span class="emoji" aria-hidden="true">🛠️</span> <span>Tools</span>
+        </a>
+        <a class="item" href="features.html" target="_parent">
+          <span class="emoji" aria-hidden="true">✨</span> <span>Features</span>
+        </a>
       </nav>
-      -->
+
+      <div class="label">Community</div>
+      <nav>
+        <a class="item" href="book-club.html" target="_parent">
+          <span class="emoji" aria-hidden="true">📚</span> <span>Book Club</span>
+        </a>
+        <a class="item" href="fan-clubs.html" target="_parent">
+          <span class="emoji" aria-hidden="true">👥</span> <span>Fan Clubs</span>
+        </a>
+      </nav>
     </div>
   </aside>
 
   <script>
-    // Auto-highlight the active link based on the parent page path (works inside iframe too).
+    // Mark active item based on parent page path (works when embedded via <iframe>).
     (function(){
+      let currentPath = '';
       try{
-        const currentPath = (window.parent && window.parent.location && window.parent.location.pathname)
+        currentPath = (window.parent && window.parent.location && window.parent.location.pathname)
           ? window.parent.location.pathname
           : window.location.pathname;
-
-        document.querySelectorAll('.nav-link').forEach(a => {
-          const aPath = new URL(a.getAttribute('href'), window.location.origin).pathname;
-          if (currentPath.endsWith(aPath)) a.classList.add('active');
+      }catch(e){
+        currentPath = window.location.pathname;
+      }
+      const links = document.querySelectorAll('.item');
+      links.forEach(a=>{
+        const p = new URL(a.getAttribute('href'), window.location.origin).pathname;
+        if(currentPath.endsWith(p)) a.classList.add('active');
+        // ensure clicks navigate parent (some browsers ignore target in sandbox configs)
+        a.addEventListener('click', (ev)=>{
+          try{ if(window.parent) { ev.preventDefault(); window.parent.location.href = a.href; } }catch(_){}
         });
-      }catch(e){ /* cross-origin edge cases: ignore */ }
+      });
     })();
   </script>
 </body>
