--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <li><a href="#" class="text-gray-800 hover:text-teal-600">Home</a></li>
         <li><a href="#info" class="text-gray-800 hover:text-teal-600">About</a></li>
         <li>
+          <!-- Changed label from "Sidebar" to "Sign In" -->
           <button id="menu-btn-desktop" class="text-gray-800 hover:text-teal-600 focus:outline-none">
-            Sidebar
+            Sign In
           </button>
         </li>
       </ul>
@@ -36,7 +37,7 @@
   </nav>
 
   <!-- Sidebar -->
-  <div id="sign in" class="fixed top-0 right-0 w-80 h-full bg-teal-600 text-white transform translate-x-full transition-transform duration-300 z-30">
+  <div id="sidebar" class="fixed top-0 right-0 w-80 h-full bg-teal-600 text-white transform translate-x-full transition-transform duration-300 z-30">
     <div class="p-6">
       <button id="close-btn" class="text-white text-2xl mb-6">✕</button>
       <ul class="space-y-6 text-lg font-semibold">
@@ -60,8 +61,8 @@
     </div>
 
     <!-- Info Cards directly on gradient -->
-    <div id="cards" class="max-w-6xl mx-auto text-center">
-      <div class="grid md:grid-cols-3 gap-8">
+    <div id="info" class="max-w-6xl mx-auto text-center">
+      <div id="cards" class="grid md:grid-cols-3 gap-8">
         <div class="p-6 bg-white/10 backdrop-blur-md rounded-xl shadow-md hover:shadow-lg">
           <h4 class="text-xl font-semibold mb-3">For New And Experienced Writers</h4>
           <p>There's something for everyone whether you're twelve or nineteen.</p>
