--- a/main-hallway.html
+++ b/main-hallway.html
@@ -26,6 +26,7 @@
       flex: 1;
       display: flex;
       flex-direction: column;
+      height: 100vh;
     }
     .topbar {
       background: #e0f1ff;
@@ -34,6 +35,9 @@
       font-weight: 700;
       border-bottom: 1px solid #cfe0ff;
       color: #195d9b;
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
     .column {
       max-width: 760px;
@@ -50,8 +54,31 @@
       border-radius: 16px;
       box-shadow: 0 10px 26px rgba(2, 32, 71, 0.1);
     }
+    .composer-wrapper {
+      display: flex;
+      justify-content: flex-end;
+    }
+    .composer-launcher {
+      padding: 10px 16px;
+      background: #ffffff;
+      border: 1px solid #cfe0ff;
+      border-radius: 999px;
+      color: #195d9b;
+      font-weight: 600;
+      cursor: pointer;
+      font-size: 14px;
+      transition: background 0.2s;
+    }
+    .composer-launcher:hover {
+      background: #f5faff;
+    }
     .composer {
+      display: none;
+      flex-direction: column;
       padding: 16px 18px;
+    }
+    .composer.active {
+      display: flex;
     }
     .composer textarea {
       width: 100%;
@@ -82,77 +109,6 @@
       color: white;
       border-color: #1976d2;
     }
-    .post {
-      display: grid;
-      grid-template-columns: auto 1fr;
-      gap: 14px;
-      padding: 16px 18px;
-      border-top: 1px solid #cfe0ff;
-    }
-    .avatar {
-      width: 40px;
-      height: 40px;
-      background: #e3f2fd;
-      border: 1px solid #cfe0ff;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      color: #195d9b;
-    }
-    .meta {
-      font-size: 12px;
-      color: #64748b;
-      display: flex;
-      gap: 8px;
-      align-items: center;
-    }
-    .author {
-      font-weight: 700;
-      color: #0b305b;
-    }
-    .body {
-      white-space: pre-wrap;
-      word-wrap: break-word;
-      line-height: 1.6;
-      margin-top: 6px;
-    }
-    .body a {
-      color: #1976d2;
-      text-decoration: underline;
-      word-break: break-word;
-    }
-    .comment-section {
-      margin-top: 10px;
-      border-top: 1px solid #cfe0ff;
-      padding-top: 10px;
-    }
-    .comment-bar {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 8px;
-    }
-    .comment-input {
-      flex: 1;
-      height: 44px;
-      border-radius: 999px;
-      border: 1px solid #cfe0ff;
-      padding: 0 16px;
-      font-size: 14px;
-      outline: none;
-    }
-    .comment-btn {
-      padding: 0 16px;
-      height: 38px;
-      border: none;
-      border-radius: 12px;
-      background: #1976d2;
-      color: white;
-      font-weight: 600;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
@@ -162,9 +118,13 @@
     <div class="topbar">Teen Writers – Main Group Chat</div>
     <div class="column">
 
-      <div class="card">
-        <form class="composer">
-          <textarea placeholder="Announce something to your class"></textarea>
+      <div class="composer-wrapper">
+        <div class="composer-launcher" onclick="toggleComposer()">Post Something!</div>
+      </div>
+
+      <div class="card composer" id="composerCard">
+        <form class="composer" onsubmit="submitPost(event)">
+          <textarea placeholder="Announce something to your class..."></textarea>
           <div class="composer-actions">
             <button type="submit" class="btn btn-post">Post</button>
           </div>
@@ -177,6 +137,16 @@
   </div>
 
   <script>
+    function toggleComposer() {
+      const composerCard = document.getElementById("composerCard");
+      composerCard.classList.toggle("active");
+    }
+
+    function submitPost(e) {
+      e.preventDefault();
+      alert("Posting not yet implemented, but UI is ready!");
+    }
+
     // Load sidebar.html content dynamically
     (function() {
       const container = document.getElementById("sidebar-container");
