--- a/main-hallway.html
+++ b/main-hallway.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: #f1f9ff;
+      background: #f6fbff; /* pearly light blue */
       display: flex;
       height: 100vh;
     }
@@ -18,6 +18,7 @@
       background: #ffffff;
       border-right: 1px solid #cfe0ff;
       flex-shrink: 0;
+      z-index: 20;
     }
     @media (max-width: 900px) {
       #sidebar-container { display: none; }
@@ -27,15 +28,18 @@
       display: flex;
       flex-direction: column;
       height: 100vh;
+      background: #f6fbff;
     }
     .header {
       background: #e0f1ff;
-      padding: 40px 32px;
-      font-size: 28px;
+      padding: 14px 20px;
+      font-size: 20px;
       font-weight: 700;
       border-bottom: 1px solid #cfe0ff;
       color: #195d9b;
-      text-align: left;
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
     .column {
       max-width: 760px;
@@ -45,6 +49,7 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
+      position: relative;
     }
     .card {
       background: #ffffff;
@@ -52,19 +57,18 @@
       border-radius: 16px;
       box-shadow: 0 10px 26px rgba(2, 32, 71, 0.1);
     }
-    .composer-wrapper {
-      width: 100%;
-    }
     .composer-launcher {
-      width: 100%;
-      padding: 14px 18px;
+      position: absolute;
+      top: -20px;
+      right: 0;
+      padding: 10px 16px;
       background: #ffffff;
       border: 1px solid #cfe0ff;
-      border-radius: 16px;
-      color: #64748b;
-      font-size: 16px;
-      font-weight: 500;
+      border-radius: 999px;
+      color: #195d9b;
+      font-weight: 600;
       cursor: pointer;
+      font-size: 14px;
       transition: background 0.2s;
     }
     .composer-launcher:hover {
@@ -116,9 +120,7 @@
     <div class="header">Teen Writers – Main Group Chat</div>
     <div class="column">
 
-      <div class="composer-wrapper">
-        <div class="composer-launcher" onclick="toggleComposer()">Post Something!</div>
-      </div>
+      <div class="composer-launcher" onclick="toggleComposer()">Post Something!</div>
 
       <div class="card composer" id="composerCard">
         <form class="composer" onsubmit="submitPost(event)">
@@ -142,7 +144,7 @@
 
     function submitPost(e) {
       e.preventDefault();
-      alert("Post submitted! (Functionality can be wired to backend later)");
+      alert("Post submitted! (Hook up to backend later)");
     }
 
     // Load sidebar.html content dynamically
