--- a/main-hallway.html
+++ b/main-hallway.html
@@ -32,7 +32,10 @@
     }
     .header {
       background: #e0f1ff;
-      padding: 14px 20px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      padding: 0 24px;
       font-size: 20px;
       font-weight: 700;
       border-bottom: 1px solid #cfe0ff;
